--- a/Cordeus/app/src/main/res/layout/activity_login.xml
+++ b/Cordeus/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             <ImageView
                 android:layout_width="192dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/logo" />
+                android:src="@drawable/nomecolorido" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@color/orange"
+                    android:background="@color/blue"
                     android:textColor="@android:color/white"/>
 
                 <Button
