--- a/Cordeus/app/src/main/res/layout/activity_main.xml
+++ b/Cordeus/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginStart="30dp"
-            android:src="@drawable/logofinal2"
+            android:src="@drawable/nomepreto"
             android:layout_gravity="start"/>
 
         <ImageButton
