--- a/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
+++ b/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
@@ -12,7 +12,9 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"></android.support.design.widget.AppBarLayout>
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +25,7 @@
             android:id="@+id/card_view1"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            card_view:cardBackgroundColor="@color/colorAccent"
+            card_view:cardBackgroundColor="@color/pink"
             card_view:cardCornerRadius="2dp"
             card_view:contentPadding="2dp">
 
@@ -46,6 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/iv_cordel"
                     android:text="Título do cordel"
+                    android:textColor="@color/white"
                     android:textSize="36sp" />
 
                 <TextView
@@ -56,7 +59,8 @@
                     android:layout_marginTop="2dp"
                     android:layout_toEndOf="@+id/iv_cordel"
                     android:text="Passagem bíblica"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textColor="@color/white"/>
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
@@ -74,7 +78,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="0.5"
-                android:background="@color/green"
+                android:background="@color/blue"
                 android:text="@string/btn_to_buy"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -87,7 +91,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="0.5"
-                android:background="@color/orange"
+                android:background="@color/blue"
                 android:text="@string/btn_code"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
