--- a/Cordeus/app/src/main/res/layout/activity_register.xml
+++ b/Cordeus/app/src/main/res/layout/activity_register.xml
@@ -80,7 +80,7 @@
                 android:textAlignment="center"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="@color/orange"
+                android:background="@color/blue"
                 android:textColor="@android:color/white"/>
         </LinearLayout>
 
