--- a/Cordeus/app/src/main/res/layout/card_item.xml
+++ b/Cordeus/app/src/main/res/layout/card_item.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:maxHeight="40dp"
         android:maxLines="2"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:gravity="center"/>
 
     <ImageView
