--- a/Cordeus/app/src/main/res/layout/card_item_new.xml
+++ b/Cordeus/app/src/main/res/layout/card_item_new.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:gravity="center"/>
 
 
