--- a/Cordeus/app/src/main/res/values/colors.xml
+++ b/Cordeus/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="default_color">#d0976a</color>
     <color name="default_color_dark">#c98b5b</color>
     <color name="rosa1">#CD5C5C</color>
-    <color name="yellow">#FFFF00</color>
+    <color name="yellow">#ffff33</color>
+    <color name="pink">#ff6369</color>
+    <color name="blue">#414466</color>
 </resources>
