--- a/Cordeus/app/src/main/res/values/styles.xml
+++ b/Cordeus/app/src/main/res/values/styles.xml
@@ -17,14 +17,14 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/default_color_dark</item>
-        <item name="colorAccent">@color/black</item>
+        <item name="colorAccent">@color/blue</item>
     </style>
 
     <style name="AppThemeRegister" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/orange</item>
-        <item name="colorPrimaryDark">@color/orange_dark</item>
-        <item name="colorAccent">@color/black</item>
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/default_color_dark</item>
+        <item name="colorAccent">@color/blue</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
