--- a/Cordeus/app/src/main/res/layout/activity_splash.xml
+++ b/Cordeus/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="@color/yellow"
+    android:background="@color/default_color"
     tools:context="empsoft.ufcg.edu.cordeus.views.SplashActivity">
 
     <android.support.design.widget.AppBarLayout
