--- a/Cordeus/app/src/main/res/values/colors.xml
+++ b/Cordeus/app/src/main/res/values/colors.xml
@@ -13,8 +13,9 @@
     <color name="default_color_dark">#c98b5b</color>
     <color name="rosa1">#CD5C5C</color>
     <color name="yellow">#ffff33</color>
+    <color name="yellow_dark">#e0e019</color>
     <color name="pink">#ff6369</color>
     <color name="blue">#414466</color>
-    <color name="blue_dark">#0b0136</color>
+    <color name="blue_dark">#323557</color>
     <color name="default_dark">#bb7341</color>
 </resources>
