--- a/Cordeus/app/src/main/res/layout/activity_login.xml
+++ b/Cordeus/app/src/main/res/layout/activity_login.xml
@@ -72,7 +72,7 @@
                     android:textAlignment="center"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    android:background="@color/blue"
+                    android:background="@layout/button_border"
                     android:textColor="@android:color/white"/>
 
                 <Button
