--- a/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
+++ b/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
@@ -24,9 +24,10 @@
         <android.support.v7.widget.CardView
             android:id="@+id/card_view1"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.7"
             card_view:cardBackgroundColor="@color/default_dark"
-            card_view:cardCornerRadius="2dp"
+            card_view:cardCornerRadius="4dp"
             card_view:contentPadding="2dp">
 
             <RelativeLayout
@@ -40,7 +41,8 @@
                     android:id="@+id/iv_cordel"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp" />
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp" />
 
                 <TextView
                     android:id="@+id/tv_title"
@@ -48,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/iv_cordel"
                     android:text="Título do cordel"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="36sp" />
 
                 <TextView
@@ -60,7 +62,7 @@
                     android:layout_toEndOf="@+id/iv_cordel"
                     android:text="Passagem bíblica"
                     android:textSize="24sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/black"/>
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
@@ -69,32 +71,34 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingTop="20dp">
+            android:layout_weight="0.3"
+            android:paddingTop="40dp"
+            android:paddingBottom="20dp">
 
             <Button
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginTop="20dp"
                 android:layout_weight="0.5"
-                android:background="@color/blue"
+                android:paddingLeft="10dp"
+                android:padding="10dp"
+                android:background="@layout/button_border"
                 android:text="@string/btn_to_buy"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/btn_code_promotional"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
                 android:layout_marginBottom="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
                 android:layout_weight="0.5"
-                android:background="@color/blue"
+                android:background="@layout/button_border"
                 android:text="@string/btn_code"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
