--- a/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
+++ b/Cordeus/app/src/main/res/layout/activity_new_cordel.xml
@@ -104,4 +104,19 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:id="@+id/loadingBuyCordel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#64000000"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            style="?android:attr/progressBarStyleLarge"/>
+
+    </RelativeLayout>
+
 </android.support.design.widget.CoordinatorLayout>
