--- a/Cordeus/app/src/main/res/layout/dialog_buy_cordel.xml
+++ b/Cordeus/app/src/main/res/layout/dialog_buy_cordel.xml
@@ -31,7 +31,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:textColor="@color/green"
+        android:textColor="@color/blue"
         android:text="ok" />
 
 </RelativeLayout>
